add selector for get devices api
