# lib/db/api.js
@@ -433,6 +433,11 @@ dbapi.loadDevices = function() {
   return db.run(r.table('devices'))
 }
 
+dbapi.loadDevicesBySelector = function(selector) {
+  return db.run(r.table('devices').filter(selector))
+}
+
+
 dbapi.loadPresentDevices = function() {
   return db.run(r.table('devices').getAll(true, {
     index: 'present'
