# lib/units/api/controllers/devices.js
@@ -16,8 +16,16 @@ module.exports = {
 
 function getDevices(req, res) {
   var fields = req.swagger.params.fields.value
+  var selector = req.swagger.params.selector.value
+  log.info("++++++ ", selector)
+  // 2018-11-26 thinkhy, to align headspin's API
+  loader = dbapi.loadDevices
+  if (selector != null) {
+    selector = JSON.parse(selector)
+    loader = dbapi.loadDevicesBySelector
+  }
 
-  dbapi.loadDevices()
+  loader(selector)
     .then(function(cursor) {
 
       return Promise.promisify(cursor.toArray, cursor)()
